# curly-dollop

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
etl/: __init__.py  claims_processor.py
tests/: __init__.py  test_claims_processor.py
