[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-etl"
version = "0.1.0"
description = "Healthcare Claims ETL Processor"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    {name = "Arpit"}
]

dependencies = [
    "pandas"
]
